--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale-1">
-	<title>Filmes em cartaz com bootstrap</title>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Filmes em Cartaz</title>
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
-	<link rel="stylesheet" href="style.css" >
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="style.css" />
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>	
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-	
+
 	<header>
 		<div class="navbar navbar-dark bg-dark">
 			<div class="container d-flex justify-content-between">
@@ -33,28 +33,13 @@
 		</section>
 		<section>
 			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
-						...
-					</div>	
-					<div class="col-md-4">
-						...
-					</div>	
-					<div class="col-md-4">
-						...
-					</div>	
-					<div class="col-md-4">
-						...
-					</div>	
-					<div class="col-md-4">
-						...
-					</div>	
-					<div class="col-md-4">
-						...
-					</div>	
+				<div class="row filmes">
+					
 				</div>
 			</div>
 		</section>
 	</main>
+
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
